--- a/punajut/pom.xml
+++ b/punajut/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.uniandes.punajut</groupId>
+    <groupId>co.edu.uniandes.punajut</groupId>
     <artifactId>punajut</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -20,12 +20,6 @@
             <artifactId>jersey-server</artifactId>
             <version>2.22.1</version>
              <scope>provided</scope>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>2.22.1</version>
             <type>jar</type>
         </dependency>
         <dependency>
