--- a/punajut/punajut.pom/pom.xml
+++ b/punajut/punajut.pom/pom.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>edu.uniandes.punajut</groupId>
-    <artifactId>punajut.pom</artifactId>
+    <groupId>co.edu.uniandes.punajut</groupId>
+    <artifactId>punajut</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>../PUNAJUT/punajut</module>
-        <module>../punajut</module>
-        <module>..</module>
+        <module>punajut-web</module>
+<!--    <module>punajut-logic</module>-->
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <id>csw-releases</id>
+            <name>csw releases</name>
+            <url>http://157.253.238.75:8081/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+
 </project>
