--- a/punajut-logic/pom.xml
+++ b/punajut-logic/pom.xml
@@ -5,6 +5,8 @@
     <artifactId>punajut-logic</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>punajut-logic</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
