--- a/punajut-logic/pom.xml
+++ b/punajut-logic/pom.xml
@@ -7,6 +7,30 @@
     <packaging>jar</packaging>
     <name>punajut-logic</name>
 
+    <parent>
+        <groupId>co.edu.uniandes.punajut</groupId>
+        <artifactId>punajut</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>co.edu.uniandes.csw</groupId>
+            <artifactId>crud-utils</artifactId>
+            <version>0.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
