--- a/punajut-web/pom.xml
+++ b/punajut-web/pom.xml
@@ -22,6 +22,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>co.edu.uniandes.punajut</groupId>
+            <artifactId>bookstore-logic</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
             <version>2.22.1</version>
