--- a/punajut-web/pom.xml
+++ b/punajut-web/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>co.edu.uniandes.punajut</groupId>
-            <artifactId>bookstore-logic</artifactId>
+            <artifactId>punajut-logic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
