--- a/punajut-web/pom.xml
+++ b/punajut-web/pom.xml
@@ -21,7 +21,13 @@
     </properties>
 
     <dependencies>
-    
+
+<!--        <dependency>  Documentado mientras se arreglan errores en el logic
+            <groupId>co.edu.uniandes.punajut</groupId>
+            <artifactId>punajut-logic</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>-->
+
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
