--- a/punajut-web/pom.xml
+++ b/punajut-web/pom.xml
@@ -22,11 +22,11 @@
 
     <dependencies>
 
-<!--        <dependency>  Documentado mientras se arreglan errores en el logic
+  <dependency>  
             <groupId>co.edu.uniandes.punajut</groupId>
             <artifactId>punajut-logic</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>javax</groupId>
